# vgalizer-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.json  install.sh  ravebox-runbook.md
docs/: vje-overlay-plan.md
docs/superpowers/specs/: 2026-04-01-audio-device-picker-design.md
packaging/aur/vgalizer-git/: .SRCINFO  PKGBUILD
previews/: curl_flow.html  cymatics.html  harmonograph.html  isoline_field.html  kaleido_warp.html  laser_burst.html  line_moire.html  mandelbrot_zoom.html  moebius_grid.html  radial_eq.html  raymarch_gyroid.html  scope_xy.html  strange_attractor.html  truchet_flow.html  tv_acid.html  vector_rabbit.html  vector_rabbit_swarm.html  vector_terrain.html  voronoi_pulse.html  wave_dunes.html  wire_tunnel.html
scripts/: beat-test-arch.sh  tune-sync.sh  vgsync.bash  vjtest.sh
shaders/: fullscreen.wgsl  globals.wgsl
shaders/effects/: cymatics.wgsl  harmonograph.wgsl  hyperspace.wgsl  isoline_field.wgsl  kaleido.wgsl  kaleido_warp.wgsl  laser_burst.wgsl  line_moire.wgsl  mandelbrot_zoom.wgsl  moebius_grid.wgsl  morph_geo.wgsl  radial_eq.wgsl  ring_tunnel.wgsl  scope_xy.wgsl  spectrum_bars.wgsl  spectrum_orbit.wgsl  spectrum_terrain.wgsl  spectrum_wave.wgsl  strange_attractor.wgsl  tv_acid.wgsl  vector_rabbit.wgsl  vector_terrain.wgsl  voronoi_pulse.wgsl  warp_grid.wgsl  wave_dunes.wgsl  wire_tunnel.wgsl
shaders/post/: glitch.wgsl  mirror.wgsl  rotation.wgsl  scanlines.wgsl  strobe.wgsl  trail.wgsl  vga.wgsl
src/: app.rs  audio_picker.rs  cli.rs  colors.rs  effects_menu.rs  global_settings.rs  input.rs  lib.rs  main.rs  overlay.rs  system_stats.rs
src/app/: blit.rs  frame.rs  mod.rs
src/audio/: analysis.rs  beat.rs  capture.rs  jack_detect.rs  mod.rs  state.rs
src/config/: mod.rs  schema.rs  watcher.rs
src/effects/: manager.rs  mod.rs  params.rs
src/gpu/: context.rs  mod.rs  pipeline.rs  uniforms.rs
src/postprocess/: mod.rs
src/text/: mod.rs  name_overlay.rs  params_overlay.rs  text_input.rs  vje_overlay.rs
tests/: audio_analysis.rs  shader_compile.rs
