[package]
name = "vgalizer"
version = "0.1.0"
edition = "2021"
description = "Lightweight GPU-accelerated audio-reactive DJ visualizer"
license = "MIT"
repository = "https://github.com/Hornfisk/vgalizer"
keywords = ["visualizer", "audio", "dj", "vj", "wgpu"]
categories = ["multimedia::video", "multimedia::audio"]

[dependencies]
# GPU + Windowing
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Audio
cpal = "0.15"

# FFT
rustfft = "6"

# Text rendering
glyphon = "0.8"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
env_logger = "0.11"
log = "0.4"
rand = "0.8"
libc = "0.2"
# Jack-detect auto-swap (T6b): read HDA input-switch events from
# /dev/input/eventN without touching sysfs or shelling out to amixer.
# natalia is already in the `input` group on pingo — no root needed.
evdev = "0.12"

# TUI (vje binary only)
ratatui = "0.29"
crossterm = "0.28"

[[bin]]
name = "vgalizer"
path = "src/main.rs"

[[bin]]
name = "vje"
path = "src/bin/vje/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[package.metadata.deb]
depends = "libasound2, libvulkan1"
section = "multimedia"
assets = [
    ["target/release/vgalizer", "usr/bin/", "755"],
    ["config.json", "etc/vgalizer/config.json", "644"],
    ["assets/fonts/RobotoCondensed-Bold.ttf", "usr/share/vgalizer/fonts/", "644"],
]
